--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,36 @@
+:root {
+    --primary: #efb126;
+    --primary-content: #140f02;
+    --primary-dark: #d29610;
+    --primary-light: #f2c255;
+
+    --secondary: #2664ef;
+    --secondary-content: #ffffff;
+    --secondary-dark: #104cd2;
+    --secondary-light: #5586f2;
+
+    --background: #f1f0ef;
+    --foreground: #fbfbfb;
+    --border: #e2e0dd;
+
+    --copy: #292723;
+    --copy-light: #6e695e;
+    --copy-lighter: #959084;
+
+    --success: #26ef26;
+    --warning: #efef26;
+    --error: #ef2626;
+    --success-content: #021402;
+    --warning-content: #141402;
+    --error-content: #ffffff;
+
+    --seperation: 12px;
+}
+
 * {
     margin: 0;
     padding: 0;
+    font-family: "Open Sans", "Arial";
 }
 
 .container {
@@ -11,8 +41,10 @@
     grid-template-rows: 1fr 5fr;
 }
 
+/* header */
+
 .header {
-    background-color: aqua;
+    background-color: white;
     grid-column: 2 / 3;
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -21,10 +53,10 @@
 
 .search-bar {
     display: flex;
-}
 
-.search-bar>input {
-    flex: 1;
+    >input {
+        flex: 1;
+    }
 }
 
 .profile {
@@ -46,17 +78,41 @@
     grid-template-columns: repeat(3, 1fr);
 }
 
+/* sidebar */
+
 .sidebar {
-    background-color: blueviolet;
+    background-color: var(--primary);
     grid-row: 1/3;
     display: flex;
     gap: 24px;
     flex-direction: column;
-    padding: 12px;
+    padding: calc(var(--seperation) * 2);
+    font-family: "Open Sans";
+    font-weight: 700;
+
+    .sidebar-title,
+    li {
+        display: flex;
+        gap: 12px;
+        margin-bottom: var(--seperation);
+    }
+
+    .sidebar-title {
+        font-size: 1.5rem;
+    }
+
+    img {
+        width: 24px;
+
+    }
 }
 
+
+
+/* content */
+
 .main-content {
-    background-color: cadetblue;
+    background-color: #f8f8f8;
     display: grid;
     grid-template-columns: 4fr 1fr;
     grid-template-rows: 1fr 1fr;
