--- a/styles.css
+++ b/styles.css
@@ -31,10 +31,10 @@
     margin: 0;
     padding: 0;
     font-family: "Open Sans", "Arial";
+    box-sizing: border-box;
 }
 
 .container {
-    width: 100vw;
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 5fr;
@@ -49,20 +49,54 @@
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
-}
+    padding: var(--seperation);
+    box-shadow: 0px 10px 10px 0px #a0a0a0;
+    z-index: 1;
 
-.search-bar {
-    display: flex;
+    img {
+        width: 24px;
+    }
 
-    >input {
-        flex: 1;
+    .header-buttons {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        align-items: center;
+        justify-items: center;
+    }
+
+    button {
+        background-color: var(--primary);
+        border: none;
+        border-radius: 48px;
+        width: 80%;
+        height: 60%;
+        font-weight: 700;
+        /* align-self: center; */
+    }
+
+    .search-bar {
+        display: flex;
+        gap: var(--seperation);
+
+        >input {
+            flex: 1;
+            margin-right: var(--seperation);
+            border: none;
+            border-radius: 48px;
+            background-color: var(--copy-lighter);
+            align-self: center;
+            height: 50%;
+        }
     }
 }
+
 
 .profile {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 2fr;
     align-items: center;
+
+
 }
 
 .greeting {
@@ -73,10 +107,7 @@
     flex: 1;
 }
 
-.header-buttons {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
+
 
 /* sidebar */
 
@@ -105,22 +136,50 @@
         width: 24px;
 
     }
+
 }
-
-
 
 /* content */
 
 .main-content {
-    background-color: #f8f8f8;
+    background-color: #e4e4e4;
     display: grid;
     grid-template-columns: 4fr 1fr;
     grid-template-rows: 1fr 1fr;
+    padding: var(--seperation);
+    margin-top: 5px;
+    gap: var(--seperation);
+
+    .content-projects-container {
+        grid-row: 1 / 3;
+
+    }
+
+    .section-heading {
+        margin-bottom: calc(var(--seperation)*2);
+    }
+
+    .content-projects {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: calc(var(--seperation)*2);
+    }
+
+    .card, .trending-cards {
+        background-color: white;
+        border-radius: 24px;
+        padding: calc(var(--seperation)*2);
+    }
+
+    hr {
+        margin-top: var(--seperation);
+    }
+
+    .ann-card, .trending-card {
+        font-size: 0.75rem;
+    }
 }
 
-.content-projects {
-    grid-row: 1 / 3;
-}
 
 li {
     list-style-type: none;
